# ofx_tools

./: .gitignore  pyproject.toml
data/: OUROCARD_ELO_GRAFITE_ESTILO-202501.ofx  OUROCARD_ELO_GRAFITE_ESTILO-202501.txt  OUROCARD_PLATINUM_ESTILO_VISA-202501.ofx  OUROCARD_PLATINUM_ESTILO_VISA-202501.txt
output/: carol.ofx  gabriel.ofx  sem_usuario.ofx
src/: test.py
src/ofx_tools/: cli.py  exporter.py  loader.py  merger.py  models.py  namer.py  parser_ofx.py  parser_txt.py  splitter.py
